--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,16 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+ <snapshotRepository>
+  <id>maven-snapshots</id>
+  <name>maven-snapshots</name>   
+  <url>http://192.168.56.4:8081/repository/maven-snapshots/</url>
+ </snapshotRepository>
+ <repository>
+  <id>maven-releases</id>
+  <name>maven-releases</name>  
+  <url>http://192.168.56.4:8081/repository/maven-releases/</url>
+ </repository>
+</distributionManagement>
 </project>
